--- a/app/src/main/res/layout/activity_inventario_form.xml
+++ b/app/src/main/res/layout/activity_inventario_form.xml
@@ -94,6 +94,31 @@
                     android:maxLength="50" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout_observaciones"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="@color/white"
+                android:hint="Observaciones"
+                app:counterEnabled="true"
+                app:counterMaxLength="150"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZÑabcdefghijklmnñopqrstuvwxyz "
+                    android:enabled="true"
+                    android:inputType="textCapSentences|textMultiLine"
+                    android:maxHeight="350dp"
+                    android:maxLength="150" />
+            </com.google.android.material.textfield.TextInputLayout>
+
 
 
         </LinearLayout>
