--- a/app/src/main/res/layout/activity_inventario_form.xml
+++ b/app/src/main/res/layout/activity_inventario_form.xml
@@ -125,7 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/azul_700"
+                android:backgroundTint="@color/azul"
                 android:text="Guardar device" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -137,8 +137,8 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:src="@android:drawable/ic_input_add"
-                app:tint="@color/white"
-                app:backgroundTint="@color/azul_700" />
+                app:backgroundTint="@color/azul"
+                app:tint="@color/white" />
 
         </LinearLayout>
 
