[MOD] probar el apartado de configuraciones

--- a/app/src/main/res/layout/activity_configuraciones_form.xml
+++ b/app/src/main/res/layout/activity_configuraciones_form.xml
@@ -43,7 +43,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZÑabcdefghijklmnñ "
+                        android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZÑabcdefghijklmnñopqrstuvwxyz "
                         android:enabled="true"
                         android:inputType="textCapSentences"
                         android:maxLength="50" />
